<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.gtsti.estudo.DashBoardActivity">
    <item
        android:id="@+id/action_editar"
        android:orderInCategory="100"
        android:title="@string/action_editar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deletar"
        android:orderInCategory="100"
        android:title="@string/action_deletar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_permissoes"
        android:orderInCategory="100"
        android:title="@string/action_permissoes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_relatorios"
        android:orderInCategory="100"
        android:title="@string/action_relatorios"
        app:showAsAction="never" />
</menu>
