<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/bg4"

    >
    <!--android:background="#b4ff8000">-->
    <!-- cOR DO FUNDO ALARANJADA #FFD700

    android:background="#b4ff8000">
    android:background="#ff0000">
    -->
    <!--Campos que comporão o login page -->
    <!--Logo -->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:src="@drawable/login"/>
    <!--Campos de logins -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:layout_marginLeft="90dp"
        android:textColor="#FFFFFF"/>
    <requestFocus/>
    <EditText
        android:id="@+id/usuario"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:layout_marginLeft="90dp"
        android:textColor="#FFFFFF"/>
    <EditText
        android:id="@+id/senha"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="#FFFFFF"/>
    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="200dp"
        android:layout_marginTop="15dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/entrar"
        android:background="#7eb3e2"
        android:textColor="#FFFFFF"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manterConectado"
        android:text="@string/manter_conectado"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="85dp"/>

</LinearLayout>
