<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        >
        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6ebfa1">

            <!--Vamos adicionar aqui os elementos -->
            <TextView
                android:id="@+id/novo_cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:text="Novo cliente"
                android:drawableTop="@drawable/cliente"
                android:onClick="SelecionarOpcao"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_gravity="left"/>

            <TextView
                android:id="@+id/novo_pedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:layout_marginRight="20dp"
                android:onClick="SelecionarOpcao"
                android:drawableTop="@drawable/cesta3"
                android:text="@string/nova_pedido"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_gravity="right"/>

            <TextView
                android:id="@+id/meus_produtos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/novo_pedido"
                android:layout_marginTop="180dp"
                android:clickable="true"
                android:drawableTop="@drawable/pedidos"
                android:onClick="SelecionarOpcao"
                android:text="@string/cad_produtos"
                android:textAlignment="center"
                android:layout_gravity="right"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nova_rota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:layout_gravity="right"
                android:drawableTop="@drawable/rotas"
                android:onClick="SelecionarOpcao"
                android:text="@string/nova_rota"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_gravity="left"
                android:id="@+id/mov_financeiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="160dp"
                android:layout_marginLeft="20dp"
                android:clickable="true"
                android:drawableTop="@drawable/financeiro"
                android:onClick="SelecionarOpcao"
                android:text="@string/mov_financeiro"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/configuracoes"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="40dp"
                android:clickable="true"
                android:drawableTop="@drawable/config_"
                android:onClick="SelecionarOpcao"
                android:text="@string/configuracoes"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
